attempt to fix map placement on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -62,7 +62,7 @@ body, html {
     #map {
         height: 348px;
         width: 285.6px;
-        top: 0%;
+        margin-top: 40%;
     }
 }
 #slider {
@@ -156,8 +156,7 @@ body, html {
 }
 @media only screen and (max-width: 425px) {
     #footer {
-        font-size: 35px;
-        bottom: 80%;
+        display: none;
     }
 }
 #layer9 {
